--- a/belleza.html
+++ b/belleza.html
@@ -25,5 +25,78 @@
             </ul>
         </nav>
     </header> 
+    <section>
+        <nav class="sect">
+            <article class="barra" >
+                <section class="barrita" id="Viajes">
+                    <h2>Belleza</h2>
+                </section>
+            </article>
+            <article class="cont">
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/barbotas.jpg" alt="">
+                                <p>¡Cabello, barba y rostro perfectos! Super paquete de promoción. Con corte de cabello + corte de barba + facial de limpieza</p>
+                            </div>
+                            <h3>$30</h3>
+                            <h4>25% off | Antes $40</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/belleza/adara-masaje.jpeg" alt="monster-burritos" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/adara estética facial.jpeg" alt="">
+                                <p>¡Escapate del Estrés: Masaje Relajante con Masaje Ecológico y Digitopresión, más exfoliación</p>
+                            </div>
+                            <h3>$20</h3>
+                            <h4>60% off | Antes $50</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/mister-bro.jpeg" alt="">
+                                <p>Paquete Corte de cabello + Corte de Barba + Pedicure Spa Paga</p>
+                            </div>
+                            <h3>$26</h3>
+                            <h4>28% off | Antes $36</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/cejas-pestañas.png" alt="">
+                                <p>Realza tu Mirada: Lifting de Pestañas Profesional</p>
+                            </div>
+                            <h3>$10</h3>
+                            <h4>62% off | Antes $26.25</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/belleza/renacer-spa-clinical.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/renacer spa clinical.jpeg" alt="">
+                                <p>¡Tu escape perfecto, masajes relajantes en un ambiente de paz y bienestar</p>
+                            </div>
+                            <h3>$22</h3>
+                            <h4>76% off | Antes $90</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </nav>
+    </section>
 </body>
 </html>
