--- a/comida.html
+++ b/comida.html
@@ -67,7 +67,7 @@
                                 <p>¡Súper Taquiza Trajinera!</p>
                             </div>
                             <h3>$12</h3>
-                            <h4>48% | Antes $22.95</h4>
+                            <h4>48% off | Antes $22.95</h4>
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
@@ -79,19 +79,19 @@
                                 <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
                             </div>
                             <h3>$15</h3>
-                            <h4>25% | Antes $20</h4>
+                            <h4>25% off | Antes $20</h4>
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
                     <div class="opciones">
-                        <img src="img/comida/restaurante-finesterre.jpeg alt="Hijos del Chilaquil" width="260" height="150">
+                        <img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/finesterre.jpeg" alt="">
                                 <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
                             </div>
                             <h3>$18</h3>
-                            <h4>49% | Antes $35</h4>
+                            <h4>49% off | Antes $35</h4>
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
