--- a/belleza.html
+++ b/belleza.html
@@ -94,6 +94,18 @@
                             <h5>Finaliza en: <span id="bold">10 días</span></h5>
                         </p>
                     </div>
+                    <div class="opciones">
+                        <img src="img/belleza/color-unas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/color-uñas.jpg" alt="">
+                                <p>Baño de acrílico o uñas acrílicas + efecto Chrome o Unicornio + Brillo UV</p>
+                            </div>
+                            <h3>$14.99</h3>
+                            <h4>35% off | Antes $22.99</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
                 </div>
             </article>
         </nav>
