--- a/things.html
+++ b/things.html
@@ -25,5 +25,81 @@
             </ul>
         </nav>
     </header> 
+    <article class="cont">
+        <div class="galeria">
+            <div class="opciones">
+                <img src="img/things/saco-boxeo.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/zona-fitness.png" alt="">
+                        <p>Pierde peso con Saco de Boxeo + Aflex Fitness + Guía de entreno para marcar y tonificar abdominales <span id="bold">(FOR MEN)</span></p>
+                    </div>
+                    <h3>$85</h3>
+                    <h4>54% off | Antes $184</h4>
+                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                </p>
+            </div>
+            <div class="opciones">
+                <img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/bioinnova.png" alt="">
+                        <p>Mesa de 1.8 metros plegable. Fabricadas con polietileno de alta calidad</p>
+                    </div>
+                    <h3>$50</h3>
+                    <h4>38% off | Antes $80</h4>
+                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                </p>
+            </div>
+            <div class="opciones">
+                <img src="img/things/super-clean.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/super-clean.jpeg" alt="">
+                        <p>Limpieza, desmanchado y desodorización de muebles de sala + aspirado y vaporizado de un juego de comedor de 4 sillas con Súper Clean</p>
+                    </div>
+                    <h3>$35</h3>
+                    <h4>42% off | Antes $60</h4>
+                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                </p>
+            </div>
+            <div class="opciones">
+                <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/vid-lab.jpeg" alt="">
+                        <p>Prueba de ADN en VIDLAB El Salvador</p>
+                    </div>
+                    <h3>$275</h3>
+                    <h4>52% off | Antes $575</h4>
+                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                </p>
+            </div>
+            <div class="opciones">
+                <img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/bioinnova.png" alt="">
+                        <p>Lujos Ergónomicos: Silla Ejecutiva con Función de Masaje Integrada</p>
+                    </div>
+                    <h3>$90</h3>
+                    <h4>65% off | Antes $138.5</h4>
+                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                </p>
+            </div>
+            <div class="opciones">
+                <img src="img/things/cleaning-power.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="img/logos-empresas/super-clean.jpeg" alt="">
+                        <p>¡Ambiente Libre de Plagas: Fumigación Efectiva contra los Zancudos!</p>
+                    </div>
+                    <h3>$23</h3>
+                    <h4>54% off | Antes $50</h4>
+                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                </p>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
