--- a/viajes.html
+++ b/viajes.html
@@ -25,5 +25,42 @@
             </ul>
         </nav>
     </header> 
+    <section>
+        <nav class="sect">
+            <article class="barra" >
+                <section class="barrita" id="Viajes">
+                    <h2>Belleza</h2>
+                </section>
+            </article>
+            <article class="cont">
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/paint-park.jpeg" alt="">
+                                <p>Paquete de 5 personas</p>
+                            </div>
+                            <h3>$30</h3>
+                            <h4>40% off | Antes $50</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/viajes/la-posada-del-cielo.jpeg" alt="monster-burritos" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/posada-del-cielo.jpeg" alt="">
+                                <p>Estadia de 1 noche para 4 personas en Miramundo y más en Hotel Posada del Cielo</p>
+                            </div>
+                            <h3>$27</h3>
+                            <h4>58% off | Antes $65</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </nav>
+    </section>
 </body>
 </html>
