--- a/index.html
+++ b/index.html
@@ -40,9 +40,44 @@
                 </section>
             </article>
             <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/comida/monster-burritos.jpeg" alt="monster-burritos" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/burritos-university.jpeg" alt="">
+                                <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
+                            </div>
+                            <h3>$13.99</h3>
+                            <h4>42% off | Antes $23.99</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
+                                <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
+                            </div>
+                            <h3>$15</h3>
+                            <h4>25% off | Antes $20</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/finesterre.jpeg" alt="">
+                                <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
+                            </div>
+                            <h3>$18</h3>
+                            <h4>49% off | Antes $35</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                </div>
             </article>
         </nav>
         <nav class="sect">
@@ -52,9 +87,32 @@
                 </section>
             </article>
             <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/paint-park.jpeg" alt="">
+                                <p>Paquete de 5 personas</p>
+                            </div>
+                            <h3>$30</h3>
+                            <h4>40% off | Antes $50</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/viajes/la-posada-del-cielo.jpeg" alt="monster-burritos" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/posada-del-cielo.jpeg" alt="">
+                                <p>Estadia de 1 noche para 4 personas en Miramundo y más en Hotel Posada del Cielo</p>
+                            </div>
+                            <h3>$27</h3>
+                            <h4>58% off | Antes $65</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                </div>
             </article>
         </nav>
         <nav class="sect">
@@ -64,9 +122,44 @@
                 </section>
             </article>
             <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/barbotas.jpg" alt="">
+                                <p>¡Cabello, barba y rostro perfectos! Super paquete de promoción. Con corte de cabello + corte de barba + facial de limpieza</p>
+                            </div>
+                            <h3>$30</h3>
+                            <h4>25% off | Antes $40</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/mister-bro.jpeg" alt="">
+                                <p>Paquete Corte de cabello + Corte de Barba + Pedicure Spa Paga</p>
+                            </div>
+                            <h3>$26</h3>
+                            <h4>28% off | Antes $36</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/cejas-pestañas.png" alt="">
+                                <p>Realza tu Mirada: Lifting de Pestañas Profesional</p>
+                            </div>
+                            <h3>$10</h3>
+                            <h4>62% off | Antes $26.25</h4>
+                            <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                        </p>
+                    </div>
+                </div>
             </article>
         </nav>
         <nav class="sect">
@@ -76,9 +169,44 @@
                 </section>
             </article>
             <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/clinica-dental.jpg" alt="">
+                                <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnostico + plan de tratamiento + presupuesto</p>
+                            </div>
+                            <h3>$20</h3>
+                            <h4>71% off | Antes $70</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/salud/ultra-group.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/ultra-group.png" alt="">
+                                <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
+                            </div>
+                            <h3>$19</h3>
+                            <h4>71% off | Antes $65</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/vid-lab.jpeg" alt="">
+                                <p>Prueba de ADN en VIDLAB El Salvador</p>
+                            </div>
+                            <h3>$275</h3>
+                            <h4>52% off | Antes $575</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                </div>
             </article>
         </nav>
         <nav class="sect">
@@ -88,9 +216,44 @@
                 </section>
             </article>
             <article class="cont">
-                <div class="caja"></div>
-                <div class="caja"></div>
-                <div class="caja"></div>
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/bioinnova.png" alt="">
+                                <p>Mesa de 1.8 metros plegable. Fabricadas con polietileno de alta calidad</p>
+                            </div>
+                            <h3>$50</h3>
+                            <h4>38% off | Antes $80</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/vid-lab.jpeg" alt="">
+                                <p>Prueba de ADN en VIDLAB El Salvador</p>
+                            </div>
+                            <h3>$275</h3>
+                            <h4>52% off | Antes $575</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                    <div class="opciones">
+                        <img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/bioinnova.png" alt="">
+                                <p>Lujos Ergónomicos: Silla Ejecutiva con Función de Masaje Integrada</p>
+                            </div>
+                            <h3>$90</h3>
+                            <h4>65% off | Antes $138.5</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
+                    </div>
+                </div>
             </article>
         </nav>
         <nav class="sect">
