--- a/viajes.html
+++ b/viajes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/categorias.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
-    <title>Comida</title>
+    <title>Viajes</title>
 </head>
 <body>
     <header class="container">
@@ -30,7 +30,7 @@
         <nav class="sect">
             <article class="barra" >
                 <section class="barrita" id="Viajes">
-                    <h2>Belleza</h2>
+                    <h2>Viajes</h2>
                 </section>
             </article>
             <article class="cont">
