--- a/belleza.html
+++ b/belleza.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/categorias.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
-    <title>Comida</title>
+    <title>Belleza</title>
 </head>
 <body>
     <header class="container">
