--- a/salud.html
+++ b/salud.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/categorias.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
-    <title>Comida</title>
+    <title>Salud</title>
 </head>
 <body>
     <header class="container">
@@ -26,69 +26,78 @@
             </ul>
         </nav>
     </header> 
-    <article class="cont">
-        <div class="galeria">
-            <div class="opciones">
-                <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
-                <p>
-                    <div class="info-cupon">
-                        <img src="img/logos-empresas/clinica-dental.jpg" alt="">
-                        <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnostico + plan de tratamiento + presupuesto</p>
+    <section>
+        <nav class="sect">
+            <article class="barra" >
+                <section class="barrita" id="Viajes">
+                    <h2>Salud</h2>
+                </section>
+            </article>
+            <article class="cont">
+                <div class="galeria">
+                    <div class="opciones">
+                        <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/clinica-dental.jpg" alt="">
+                                <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnostico + plan de tratamiento + presupuesto</p>
+                            </div>
+                            <h3>$20</h3>
+                            <h4>71% off | Antes $70</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
                     </div>
-                    <h3>$20</h3>
-                    <h4>71% off | Antes $70</h4>
-                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                </p>
-            </div>
-            <div class="opciones">
-                <img src="img/salud/opti-smart.jpeg" alt="monster-burritos" width="260" height="150">
-                <p>
-                    <div class="info-cupon">
-                        <img src="img/logos-empresas/opti-smart.png" alt="">
-                        <p>Lentes progresivos blancos con filtro de luz azul</p>
+                    <div class="opciones">
+                        <img src="img/salud/opti-smart.jpeg" alt="monster-burritos" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/opti-smart.png" alt="">
+                                <p>Lentes progresivos blancos con filtro de luz azul</p>
+                            </div>
+                            <h3>$125</h3>
+                            <h4>32% off | Antes $185</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
                     </div>
-                    <h3>$125</h3>
-                    <h4>32% off | Antes $185</h4>
-                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                </p>
-            </div>
-            <div class="opciones">
-                <img src="img/salud/ultra-group.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-                <p>
-                    <div class="info-cupon">
-                        <img src="img/logos-empresas/ultra-group.png" alt="">
-                        <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
+                    <div class="opciones">
+                        <img src="img/salud/ultra-group.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/ultra-group.png" alt="">
+                                <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
+                            </div>
+                            <h3>$19</h3>
+                            <h4>71% off | Antes $65</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
                     </div>
-                    <h3>$19</h3>
-                    <h4>71% off | Antes $65</h4>
-                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                </p>
-            </div>
-            <div class="opciones">
-                <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
-                <p>
-                    <div class="info-cupon">
-                        <img src="img/logos-empresas/vid-lab.jpeg" alt="">
-                        <p>Prueba de ADN en VIDLAB El Salvador</p>
+                    <div class="opciones">
+                        <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/vid-lab.jpeg" alt="">
+                                <p>Prueba de ADN en VIDLAB El Salvador</p>
+                            </div>
+                            <h3>$275</h3>
+                            <h4>52% off | Antes $575</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
                     </div>
-                    <h3>$275</h3>
-                    <h4>52% off | Antes $575</h4>
-                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                </p>
-            </div>
-            <div class="opciones">
-                <img src="img/salud/clinica-inficon.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-                <p>
-                    <div class="info-cupon">
-                        <img src="img/logos-empresas/clinica-inficon.jpeg" alt="">
-                        <p>Sesión de Terapia Psicológica en Clínica Psicológica INFICON</p>
+                    <div class="opciones">
+                        <img src="img/salud/clinica-inficon.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <p>
+                            <div class="info-cupon">
+                                <img src="img/logos-empresas/clinica-inficon.jpeg" alt="">
+                                <p>Sesión de Terapia Psicológica en Clínica Psicológica INFICON</p>
+                            </div>
+                            <h3>$17.99</h3>
+                            <h4>55% off | Antes $40</h4>
+                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
+                        </p>
                     </div>
-                    <h3>$17.99</h3>
-                    <h4>55% off | Antes $40</h4>
-                    <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                </p>
-            </div>
-        </div>
-    </article>
+                </div>
+            </article>
+        </nav>
+    </section>
 </body>
 </html>
