--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <header class="container">
-        <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>       
+        <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>  
+        <input type="checkbox" id="menu-ham" class="menu-ham-checkbox" />
+        <label for="menu-ham" class="menu-ham">
+            <i class="fa fa-bars"></i> <!-- Ícono de menú (hamburguesa) -->
+        </label>     
         <nav id="menu">
             <ul id="items">
                 <li><i class="fas fa-utensils" id="icons"></i><a href="comida.html">Comida</a></li>
