--- a/howworks.html
+++ b/howworks.html
@@ -37,7 +37,7 @@
                     las mejores promociones solo están disponibles durante un par de días. Luego de la compra, dispones de 1 a 6 meses para usar tu cupón.</p>
                 
                 <p>✔️ El siguiente paso es comprar tu cupón; no te preocupes, es seguro y fácil, ya que contamos con un portal de pagos externo que soporta cualquier tarjeta VISA 
-                    o MasterCard. Simplemente presiona el botón "Comprar" y serás redirigido(a) para pagar con tarjeta de débito o crédito. Si deseas pagar mediante transferencia 
+                    o MasterCard. Simplemente presiona el botón "Comprar" y serás redirigido(a) para pagar con tarjeta de débito o crédito.<br> Si deseas pagar mediante transferencia 
                     bancaria, comunícate a nuestro WhatsApp (7878 8078), nuestros operadores te ayudarán.</p>
                 
                 <p>✔️ Después de haberse confirmado el pago por cualquier medio, se enviará a tu correo electrónico y a tu número de contacto el cupón. No es necesario que 
