--- a/index copy.html
+++ b/index copy.html
@@ -62,7 +62,7 @@
                         <img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
-                                <img src="img/logos-empresas/la-bodeguita-del-cerdito.jpeg" alt="">
+                                <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
                                 <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
                             </div>
                             <h3>$15</h3>
