--- a/index copy.html
+++ b/index copy.html
@@ -91,9 +91,9 @@
                     <h2>Viajes</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="galeria">
-                    <div class="viajes">
+            <article id="contenido">
+                <div id="galeria">
+                    <div class="plan opciones">
                         <img src="img/viajes/parque.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
@@ -105,12 +105,12 @@
                             <h5>Finaliza en: <span id="bold">5 días</span></h5>
                         </p>
                     </div>
-                    <div class="opciones">
-                        <img src="img/viajes/la-posada-del-cielo.jpeg" alt="monster-burritos" width="260" height="150">
+                    <div class="plan opciones">
+                        <img src="img/viajes/la-posada-del-cielo.jpeg" alt="La Posada del Cielo" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/posada-del-cielo.jpeg" alt="">
-                                <p>Estadia de 1 noche para 4 personas en Miramundo y más en Hotel Posada del Cielo</p>
+                                <p>Estadía de 1 noche para 4 personas en Miramundo y más en Hotel Posada del Cielo</p>
                             </div>
                             <h3>$27</h3>
                             <h4>58% off | Antes $65</h4>
@@ -119,6 +119,7 @@
                     </div>
                 </div>
             </article>
+            
         </nav>
         <nav class="sect">
             <article class="barra">
