--- a/index copy.html
+++ b/index copy.html
@@ -127,8 +127,8 @@
                 </section>
             </article>
             
-            <article class="cont">
-                <div class="galeria">
+            <article id="contenido">
+                <div id="galeria">
                     <div class="plan opciones">
                         <img src="img/belleza/barbotas.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                 </div>
-            </article>            
+            </article>           
         </nav>
         <nav class="sect">
             <article class="barra">
