--- a/index.html
+++ b/index.html
@@ -172,46 +172,46 @@
                     <h2>Salud</h2>
                 </section>
             </article>
+            <article class="barra">
+                <section class="barrita" id="Salud">
+                    <h2>Salud</h2>
+                </section>
+            </article>
             <article id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
                         <img src="img/salud/clinica-cindy-padilla-relleno.png" alt="Hijos del Chilaquil" width="260" height="150">
-                        <p>
-                            <div class="info-cupon">
-                                <img src="img/logos-empresas/clinica-dental.jpg" alt="">
-                                <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnóstico + plan de tratamiento + presupuesto</p>
-                            </div>
-                            <h3>$20</h3>
-                            <h4>71% off | Antes $70</h4>
-                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                        </p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/clinica-dental.jpg" alt="">
+                            <p>1 relleno + limpieza dental con ultrasonido + pulido dental + aplicación tópica de flúor + diagnóstico + plan de tratamiento + presupuesto</p>
+                        </div>
+                        <h3>$20</h3>
+                        <h4>71% off | Antes $70</h4>
+                        <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                     <div class="plan opciones">
                         <img src="img/salud/ultra-group.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-                        <p>
-                            <div class="info-cupon">
-                                <img src="img/logos-empresas/ultra-group.png" alt="">
-                                <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
-                            </div>
-                            <h3>$19</h3>
-                            <h4>71% off | Antes $65</h4>
-                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                        </p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/ultra-group.png" alt="">
+                            <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
+                        </div>
+                        <h3>$19</h3>
+                        <h4>71% off | Antes $65</h4>
+                        <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                     <div class="plan opciones">
                         <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
-                        <p>
-                            <div class="info-cupon">
-                                <img src="img/logos-empresas/vid-lab.jpeg" alt="">
-                                <p>Prueba de ADN en VIDLAB El Salvador</p>
-                            </div>
-                            <h3>$275</h3>
-                            <h4>52% off | Antes $575</h4>
-                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                        </p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/vid-lab.jpeg" alt="">
+                            <p>Prueba de ADN en VIDLAB El Salvador</p>
+                        </div>
+                        <h3>$275</h3>
+                        <h4>52% off | Antes $575</h4>
+                        <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                 </div>
-            </article>            
+            </article>
+                      
         </nav>
         <nav class="sect">
             <article class="barra">
