--- a/index copy.html
+++ b/index copy.html
@@ -222,46 +222,40 @@
                     <h2>Things</h2>
                 </section>
             </article>
-            <article class="cont">
-                <div class="galeria">
-                    <div class="opciones">
+            <article id="contenido">
+                <div id="galeria">
+                    <div class="plan opciones">
                         <img src="img/things/bioinnova.jpeg" alt="monster-burritos" width="260" height="150">
-                        <p>
-                            <div class="info-cupon">
-                                <img src="img/logos-empresas/bioinnova.png" alt="">
-                                <p>Mesa de 1.8 metros plegable. Fabricadas con polietileno de alta calidad</p>
-                            </div>
-                            <h3>$50</h3>
-                            <h4>38% off | Antes $80</h4>
-                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                        </p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/bioinnova.png" alt="">
+                            <p>Mesa de 1.8 metros plegable. Fabricada con polietileno de alta calidad</p>
+                        </div>
+                        <h3>$50</h3>
+                        <h4>38% off | Antes $80</h4>
+                        <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/salud/lab-vidlab.png" alt="Hijos del Chilaquil" width="260" height="150">
-                        <p>
-                            <div class="info-cupon">
-                                <img src="img/logos-empresas/vid-lab.jpeg" alt="">
-                                <p>Prueba de ADN en VIDLAB El Salvador</p>
-                            </div>
-                            <h3>$275</h3>
-                            <h4>52% off | Antes $575</h4>
-                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                        </p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/vid-lab.jpeg" alt="">
+                            <p>Prueba de ADN en VIDLAB El Salvador</p>
+                        </div>
+                        <h3>$275</h3>
+                        <h4>52% off | Antes $575</h4>
+                        <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
-                    <div class="opciones">
+                    <div class="plan opciones">
                         <img src="img/things/bioinnova-silla.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-                        <p>
-                            <div class="info-cupon">
-                                <img src="img/logos-empresas/bioinnova.png" alt="">
-                                <p>Lujos Ergónomicos: Silla Ejecutiva con Función de Masaje Integrada</p>
-                            </div>
-                            <h3>$90</h3>
-                            <h4>65% off | Antes $138.5</h4>
-                            <h5>Finaliza en: <span id="bold">5 días</span></h5>
-                        </p>
+                        <div class="info-cupon">
+                            <img src="img/logos-empresas/bioinnova.png" alt="">
+                            <p>Lujos Ergonómicos: Silla Ejecutiva con Función de Masaje Integrada</p>
+                        </div>
+                        <h3>$90</h3>
+                        <h4>65% off | Antes $138.5</h4>
+                        <h5>Finaliza en: <span id="bold">5 días</span></h5>
                     </div>
                 </div>
-            </article>
+            </article>            
         </nav>
         <nav class="sect">
             <article class="barra">
