--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="container">
-        <a href="index copy.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>  
+        <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>  
         <input type="checkbox" id="menu-ham" class="menu-ham-checkbox" />
         <label for="menu-ham" class="menu-ham">
             <i class="fa fa-bars"></i> <!-- Ícono de menú (hamburguesa) -->
