--- a/salud.html
+++ b/salud.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="container">
-        <a href="index copy.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>       
+        <a href="index.html"><img src="img/Logo.jpg" alt="Logo" id="logo"></a>       
         <nav id="menu">
             <ul id="items">
                 <li><i class="fas fa-utensils" id="icons"></i><a href="comida.html">Comida</a></li>
