--- a/salud.html
+++ b/salud.html
@@ -64,7 +64,7 @@
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/ultra-group.png" alt="">
-                                <p>Ultrasonografía a escoger + consulta médica de clínica <span id="bold">Ultra-A-Group</span></p>
+                                <p>Ultrasonografía a escoger + consulta médica de clínica</p>
                             </div>
                             <h3>$19</h3>
                             <h4>71% off | Antes $65</h4>
