--- a/index copy.html
+++ b/index copy.html
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <img src="img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
@@ -71,7 +71,7 @@
                         </p>
                     </div>
                     <div class="plan opciones">
-                        <img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <img src="img/comida/finesterre.jpg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/finesterre.jpeg" alt="">
