--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section id="contenido">
                 <div id="galeria">
                     <div class="plan opciones">
-                       <a href="comida.html"><img src="img/comida/monster-burritos.jpeg" alt="monster-burritos" width="260" height="150"></a>
+                       <a href="comida.html"><img src="img/comida/box.jpeg" alt="monster-burritos" width="260" height="150"></a>
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/burritos-university.jpeg" alt="">
