--- a/comida.html
+++ b/comida.html
@@ -52,7 +52,7 @@
                         </p>
                     </div>
                     <div class="opciones">
-                        <img src="img/comida/monster-burritos.jpeg" alt="monster-burritos" width="260" height="150">
+                        <img src="img/comida/box2.jpeg" alt="monster-burritos" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/burritos-university.jpeg" alt="">
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                     <div class="opciones">
-                        <img src="img/comida/la-bodeguita-del-cerdito.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <img src="img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
@@ -88,7 +88,7 @@
                         </p>
                     </div>
                     <div class="opciones">
-                        <img src="img/comida/restaurante-finesterre.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                        <img src="img/comida/finesterre.jpg" alt="Hijos del Chilaquil" width="260" height="150">
                         <p>
                             <div class="info-cupon">
                                 <img src="img/logos-empresas/finesterre.jpeg" alt="">
