--- a/index.html
+++ b/index.html
@@ -235,5 +235,23 @@
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
-
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyB68QDO-q8ngnF5Cz1cvkNJswDX4vGcs18",
+      authDomain: "proyecto-desarrollo-web-i.firebaseapp.com",
+      projectId: "proyecto-desarrollo-web-i",
+      storageBucket: "proyecto-desarrollo-web-i.firebasestorage.app",
+      messagingSenderId: "922911576837",
+      appId: "1:922911576837:web:0a723db5841c12c1649d6c"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </html>
